--- a/views/inherit_hr_employee_view_form.xml
+++ b/views/inherit_hr_employee_view_form.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<!-- <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 	<record id="inherit_employee_form_view" model="ir.ui.view">
         <field name="name">view.hr.employee.view.form</field>
@@ -14,4 +14,4 @@
            
         </field>
     </record>
-</odoo>
+</odoo> -->
