--- a/views/hr_employee_change_view.xml
+++ b/views/hr_employee_change_view.xml
@@ -1,70 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-  <record id="employee_update_tree" model="ir.ui.view">
-    <field name="name">hr.employee.change.tree</field>
-    <field name="model">hr.employee.change</field>
-    <field name="arch" type="xml">
-      <tree>
-     
-      
-        <field name="name_id" />
-         <field name="changed_name"/>
-          <field name="temp_phone" />
-          <field name="temp_employee_country_id"/>
-          <!-- <field name="is_admin_employee" invisible="1"/> -->
-          <field name="temp_work_phone"/>
-          <field name="temp_private_email"/>
-          <field name="temp_marital"/>
-          <field name="temp_emergency_contact"/>
-          <field name="temp_emergency_phone"/>
-          <field name="temp_identification_id"/>
-          <field name="temp_passport_id"/>
-          <field name="temp_gender"/>
-          <field name="temp_birthday"/>
-          <field name="temp_place_of_birth"/>
-       </tree>
-        
-    </field>
-  </record>
-   <record id="employee_update_form" model="ir.ui.view">
-    <field name="name">hr.employee.change.form</field>
-    <field name="model">hr.employee.change</field>
-    <field name="arch" type="xml">
-      <form>
-        <header>
-          <button name="validate_change_in_information" type="object" string="validate" class="btn-primary" />
-          <button name="reject_change_in_information" type="object" string="reject" class="btn-primary" />
+    <record id="employee_update_tree" model="ir.ui.view">
+        <field name="name">hr.employee.change.tree</field>
+        <field name="model">hr.employee.change</field>
+        <field name="arch" type="xml">
+            <tree>
 
-        </header>
-        <group>
-          <field name="name_id" />
-          <field name="changed_name"/>
-          <field name="temp_phone" />
-          <field name="temp_employee_country_id"/>
-          <!-- <field name="is_admin_employee" invisible="1"/> -->
-          <field name="temp_work_phone"/>
-          <field name="temp_private_email"/>
-          <field name="temp_marital"/>
-          <field name="temp_emergency_contact"/>
-          <field name="temp_emergency_phone"/>
-          <field name="temp_identification_id"/>
-          <field name="temp_passport_id"/>
-          <field name="temp_gender"/>
-          <field name="temp_birthday"/>
-          <field name="temp_place_of_birth"/>
 
-        </group>
-       </form>
-        
-    </field>
-  </record>
+                <field name="name_id"/>
+                <field name="changed_name"/>
+                <field name="temp_phone"/>
+                <field name="temp_employee_country_id"/>
+                <!-- <field name="is_admin_employee" invisible="1"/> -->
+                <field name="temp_work_phone"/>
+                <field name="temp_private_email"/>
+                <field name="temp_marital"/>
+                <field name="temp_emergency_contact"/>
+                <field name="temp_emergency_phone"/>
+                <field name="temp_identification_id"/>
+                <field name="temp_passport_id"/>
+                <field name="temp_gender"/>
+                <field name="temp_birthday"/>
+                <field name="temp_place_of_birth"/>
+            </tree>
 
-  <record model="ir.actions.act_window" id="action_hr_employee_change">
-    <field name="name">Employee Information Validate</field>
-    <field name="res_model">hr.employee.change</field>
-    <field name="view_mode">tree,form</field>
-  </record>
+        </field>
+    </record>
+    <record id="employee_update_form" model="ir.ui.view">
+        <field name="name">hr.employee.change.form</field>
+        <field name="model">hr.employee.change</field>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="submitted,validated,rejected"/>
+                    <button name="validate_change_in_information" type="object" string="Validate" class="btn-primary"
+                            attrs="{'invisible': [('state', 'in', ['validated', 'rejected'])]}"/>
+                    <button name="reject_change_in_information" type="object" string="Reject" class="btn-danger"
+                            attrs="{'invisible': [('state', 'in', ['validated', 'rejected'])]}"/>
 
-  <menuitem id="employee_update" name="Validate Information"/>
-  <menuitem id="employee_update_access" name="Employee Information Update" action="update_employee_information.action_hr_employee_change" parent="update_employee_information.employee_update" sequence="4" groups="update_employee_information.group_administrator_employee" />
+                </header>
+                <group>
+                    <field name="name_id"/>
+                    <field name="changed_name"/>
+                    <field name="temp_phone"/>
+                    <field name="temp_employee_country_id"/>
+                    <!-- <field name="is_admin_employee" invisible="1"/> -->
+                    <field name="temp_work_phone"/>
+                    <field name="temp_private_email"/>
+                    <field name="temp_marital"/>
+                    <field name="temp_emergency_contact"/>
+                    <field name="temp_emergency_phone"/>
+                    <field name="temp_identification_id"/>
+                    <field name="temp_passport_id"/>
+                    <field name="temp_gender"/>
+                    <field name="temp_birthday"/>
+                    <field name="temp_place_of_birth"/>
+
+                </group>
+            </form>
+
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="action_hr_employee_change">
+        <field name="name">Employee Information Validate</field>
+        <field name="res_model">hr.employee.change</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <menuitem id="employee_update" name="Validate Information"/>
+    <menuitem id="employee_update_access" name="Employee Information Update"
+              action="update_employee_information.action_hr_employee_change"
+              parent="update_employee_information.employee_update" sequence="4"
+              groups="update_employee_information.group_administrator_employee"/>
 </odoo>
