feat: update request

--- a/views/update_info_user_view.xml
+++ b/views/update_info_user_view.xml
@@ -18,7 +18,9 @@
     <field name="arch" type="xml">
       <form>
       <header>
-      <button name="submit_action_send_email" type="object" string="submit changes" class="btn-primary"/>
+      <button name="submit_action_send_email" type="object" string="submit changes" class="btn-primary" attrs="{'invisible': [('state', '!=', 'draft')]}"/>
+     
+      <field name="state" widget="statusbar" statusbar_visible="draft,submitted"/>
 
       </header>
       <group>
